--- a/service_test/setup.html
+++ b/service_test/setup.html
@@ -131,6 +131,12 @@
     <h1>התקנת מערכת מידע לבית כנסת</h1>
     
     <div class="setup-container">
+        <!-- אזור לוג שגיאות -->
+        <div style="background-color: #f8f8f8; border: 1px solid #ddd; padding: 10px; margin-bottom: 20px; border-radius: 5px; text-align: left; direction: ltr; max-height: 200px; overflow-y: auto;">
+            <h3 style="margin-top: 0; text-align: right; direction: rtl;">לוג שגיאות:</h3>
+            <pre id="debug-log" style="font-family: monospace; margin: 0; white-space: pre-wrap;"></pre>
+        </div>
+        
         <div class="step" id="step1">
             <span class="step-number">1</span>
             <div class="step-title">בדיקת תאימות דפדפן</div>
