--- a/service_test/index.html
+++ b/service_test/index.html
@@ -239,7 +239,7 @@
     
     <div class="container">
         <header>
-            <h1 id="synagogue-name">בית הכנסת המרכזי</h1>
+            <h1 id="synagogue-name">בית הכנסת המרכזי2</h1>
         </header>
         
         <div class="content">
