--- a/service_test/index.html
+++ b/service_test/index.html
@@ -196,6 +196,7 @@
     
     <div class="container">
         <header>
+<h1 id="syme">בית הכנסת המרכזי4</h1>
             <h1 id="synagogue-name">בית הכנסת המרכזי4</h1>
         </header>
         
