--- a/service_test/index.html
+++ b/service_test/index.html
@@ -196,8 +196,8 @@
     
     <div class="container">
         <header>
-<h1 id="syme">בית הכנסת המרכזי14</h1>
-            <h1 id="synagogue-name">בית הכנסת המרכזי4</h1>
+<h1 id="syme">גירסה 1</h1>
+            <h1 id="synagogue-name">בית  המרכזי4</h1>
         </header>
         
         <div class="content">
